# Content_Shield

./: .dockerignore  .env.example  .gitignore  AGENT-A-REPORT.md  AGENT-D-SYNTHESIS.md  AGENT-F-REPORT.md  Dockerfile  Makefile  PRODUCT_VISION.md  README.md  calibration_test.py  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
joshua7/: __init__.py  config.py  engine.py  models.py  regex_guard.py  risk_taxonomy.py
joshua7/api/: __init__.py  main.py  routes.py  security.py
joshua7/cli/: __init__.py  main.py
joshua7/validators/: __init__.py  base.py  brand_voice.py  forbidden_phrases.py  pii.py  prompt_injection.py  readability.py  toxicity.py
joshua_7/: __init__.py  engine.py  sanitize.py
joshua_7/api/: main.py  routes.py
joshua_7/cli/: main.py
joshua_7/validators/: __init__.py  base.py  brand_voice.py  forbidden_phrases.py  pii.py  prompt_injection.py  readability.py
leadlatch/: .env.example  .gitignore  README.md  package-lock.json  package.json
leadlatch/docs/: A-ARCHITECTURE.md  ARCHITECTURE.md  DEFINITION-OF-DONE.md  DEPLOYMENT.md  F-N8N-WORKFLOW.md  G-DEPLOYMENT.md  H-DEFINITION-OF-DONE.md
leadlatch/n8n/: README.md  workflow-outline.json  workflow-speed-to-lead.json
leadlatch/src/app/: globals.css  layout.tsx
leadlatch/src/app/dashboard/: layout.tsx  page.tsx
leadlatch/src/app/login/: page.tsx
leadlatch/src/components/dashboard/: add-note-form.tsx  create-org-dialog.tsx  lead-timeline.tsx  org-context.tsx  org-switcher.tsx  sidebar.tsx
leadlatch/src/types/: database.ts
leadlatch/supabase/: config.toml
leadlatch/supabase/migrations/: 00001_schema.sql  00002_rls_policies.sql  00003_seed.sql  00004_rpc_functions.sql  20260219000001_initial_schema.sql  20260219000002_rls_policies.sql  20260219000003_seed_helpers.sql
leadlatch/web/: .env.local.example  package-lock.json  package.json
tests/: test_api.py  test_brand_voice.py  test_engine.py  test_forbidden_phrases.py  test_pii.py  test_prompt_injection.py  test_readability.py  test_risk_taxonomy.py  test_security.py  test_toxicity.py
(+27 files in other folders)
